--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
 	<div class="nav__content">
 		<ul class="nav__list">
 			<li class="nav__list-item">Home</li>
-			<li class="nav__list-item">About</li>
-			<li class="nav__list-item">Projects</li>
-			<li class="nav__list-item">Contact</li>
+			<li class="nav__list-item">About Us</li>
+			<li class="nav__list-item">African Libraries</li>
+			<li class="nav__list-item">Resources/FAQ</li>
+			<li class="nav__list-item">Book Drives</li>
+			<li class="nav__list-item">Pay For Shipping</li>
+			<br>
+			<li class="nav__list-item">DONATE</li>
 		</ul>
 	</div>
 </div>
