--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:200,300,400,500" rel="stylesheet">
-    <link href="./style.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Fira+Sans:200,300,400,500" rel="stylesheet">
+	<link href="./style.css" rel="stylesheet">
 </head>
 
 <div id="progress">
-	<span id="progress-value">&#x1F815;</span>
-  </div>
+	<span id="progress-value">&#708;</span>
+</div>
 
 <div class="menu-icon">
 	<span class="menu-icon__line menu-icon__line-left"></span>
@@ -45,8 +45,8 @@
 	qui voluptatibus id assumenda totam fugit, numquam temporibus ad sint
 	voluptatum tenetur unde illo. Pariatur nesciunt, perspiciatis rerum
 	voluptates voluptatum consequuntur placeat autem deserunt.
-  </p>
-  <p>
+</p>
+<p>
 	Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam sed
 	perspiciatis rerum ea quia nostrum, quod sit dolorem, illum officia
 	inventore, maiores ipsum voluptas aut facere? Quos, autem odit nostrum
@@ -58,8 +58,8 @@
 	accusantium modi molestias nesciunt sint soluta, fuga alias doloribus odit
 	dolor ipsa libero corporis neque adipisci aspernatur quisquam, sit,
 	officia id harum tenetur ullam beatae!
-  </p>
-  <p>
+</p>
+<p>
 	Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit est in
 	minima quos accusamus, id assumenda laborum libero culpa autem corrupti
 	repellendus voluptatem saepe odit maxime, aut ab fugit voluptas omnis
@@ -71,8 +71,8 @@
 	voluptatem non quis accusantium aspernatur cumque id modi! Aliquam ab
 	expedita ipsum, libero in quod, sunt mollitia voluptatibus sapiente, dolor
 	sit delectus?
-  </p>
-  <p>
+</p>
+<p>
 	Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit molestias
 	dolorum dolore amet tenetur! At sed nulla sapiente dolorum hic, facere
 	accusamus officiis placeat commodi molestias, velit dolor ab quibusdam
@@ -96,7 +96,8 @@
 	sapiente unde officia blanditiis architecto reiciendis magni sequi.
 	Repellat ex ab laboriosam, quos error enim ut officiis inventore
 	accusamus!
-  </p>
+</p>
 
 <script src="./script.js"></script>
+
 </html>
